인덱스 바꾸기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -334,7 +334,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 인덱스 바꾸기"
+    "#### 인덱스 바꾸기\n",
+    "\n",
+    "문자열은 해당 방법으로 불가능 (숫자만 가능)\n",
+    "`my_string[num1], my_string[num2] = my_string[num2], my_string[num1]`  \n",
+    "\n",
+    "하지만 my_string을 list로 변경해서 사용하면 된다..\n",
+    "```python \n",
+    "def solution(my_string, num1, num2):\n",
+    "    s = list(my_string)\n",
+    "    s[num1],s[num2] = s[num2],s[num1]\n",
+    "    return ''.join(s)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, num1, num2):\n",
+    "    return my_string[:num1] + my_string[num2] + my_string[num1+1:num2] + my_string[num1] + my_string[num2+1:]"
    ]
   },
   {
