한 번만 등장한 문자

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -366,10 +366,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    for i in s:\n",
+    "        # i를 카운트했을 때 1이 아니라면 (여러개라면), i 값을 공백으로 변경\n",
+    "        if s.count(i) != 1:\n",
+    "            s = s.replace(i,'')\n",
+    "    return ''.join(sorted(s))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 약수 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    result = []\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            result.append(i)\n",
+    "    return result"
    ]
   },
   {
