--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -415,6 +415,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(message):\n",
+    "    return len(message)*2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
