가장 큰 수 찾기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -428,7 +428,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 가장 큰 수 찾기"
+    "#### 가장 큰 수 찾기\n",
+    "\n",
+    "list.index(값) : 원하는 값의 위치를 찾아준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array):\n",
+    "    return [max(array), array.index(max(array))]"
    ]
   },
   {
