--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -447,14 +447,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문자열 계산하기"
+    "#### 문자열 계산하기\n",
+    "\n",
+    "eval(): 문자열로 된 표현식을 계산한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string):\n",
+    "    return eval(my_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 반례는 my_string이 \"3 + 4 + 3\" 일 수도 있다는 것. (처음에 이걸 고려 안해서 실패함)\n",
+    "def solution(my_string):\n",
+    "    li = my_string.split(\" \")\n",
+    "    # return li\n",
+    "    for i in range(len(li)):\n",
+    "        if li[i] == \"+\":\n",
+    "            li[i+1] = str(int(li[i-1]) + int(li[i+1]))\n",
+    "        elif li[i] == \"-\":\n",
+    "            li[i+1] = str(int(li[i-1]) - int(li[i+1]))\n",
+    "    return int(li[-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 배열의 유사도"
+    "#### 배열의 유사도\n",
+    "\n",
+    "set의 집합을 사용해서 풀자..!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s1, s2):\n",
+    "    result = 0\n",
+    "    for i in s1:\n",
+    "        for j in s2:\n",
+    "            if i == j:\n",
+    "                result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set을 사용해서 집합으로 풀면 완전 간단함...\n",
+    "def solution(s1, s2):\n",
+    "    return len(set(s1)&set(s2));"
    ]
   },
   {
