배열 만들기5

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -838,6 +838,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Day9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 만들기5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(intStrs, k, s, l):\n",
+    "    result = []\n",
+    "    for i in intStrs:\n",
+    "        if int(i[s:s+l]) > k:\n",
+    "            result.append(int(i[s:s+l]))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
