부분 문자열 이어 붙여 문자열 만들기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -866,6 +866,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 부분 문자열 이어 붙여 문자열 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_strings, parts):\n",
+    "    answer = ''\n",
+    "    for i in range(len(my_strings)):\n",
+    "        answer += my_strings[i][parts[i][0]:parts[i][1]+1]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day10"
    ]
   },
