문자열의 뒤의 n글자

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -886,6 +886,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 문자열의 뒤의 n글자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, n):\n",
+    "    return my_string[len(my_string)-n:]\n",
+    "\n",
+    "    # 더 간단하게 \n",
+    "    return my_string[-n:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day10"
    ]
   },
