접미사 배열

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -906,6 +906,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 접미사 배열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string):\n",
+    "    result = []\n",
+    "    for i in range(len(my_string)):\n",
+    "        result.append(my_string[i:])\n",
+    "    return sorted(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day10"
    ]
   },
