접미사인지 확인하기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -926,6 +926,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 접미사인지 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, is_suffix):\n",
+    "    for i in range(len(my_string)):\n",
+    "        if my_string[i:] == is_suffix:\n",
+    "            return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 초간단 풀이 (다른사람 풀이)\n",
+    "def solution(m, s):\n",
+    "    if m[-len(s):]==s: return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day10"
    ]
   },
