문자열의 앞의 n글자

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -965,6 +965,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 문자열의 앞의 n글자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, n):\n",
+    "    return my_string[:n]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
