접두사인지 확인하기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -982,6 +982,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 접두사인지 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, is_prefix):\n",
+    "    if my_string[:len(is_prefix)] == is_prefix:\n",
+    "        return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
