--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1001,6 +1001,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 문자열 뒤집기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(m, s, e):\n",
+    "    return m[:s] + ''.join(reversed(m[s:e+1])) + m[e+1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
