문자열 뒤집기: 코멘트 추가

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1011,7 +1011,10 @@
    "outputs": [],
    "source": [
     "def solution(m, s, e):\n",
-    "    return m[:s] + ''.join(reversed(m[s:e+1])) + m[e+1:]"
+    "    return m[:s] + ''.join(reversed(m[s:e+1])) + m[e+1:]\n",
+    "\n",
+    "    # 처음 생각했던 방식... [::-1]로 뒤집을 수 있다는 것을 잊지 말자\n",
+    "    return my_string[:s]+my_string[s:e+1][::-1]+my_string[e+1:]"
    ]
   },
   {
