--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1001,7 +1001,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 문자열 뒤집기"
+    "#### 문자열 뒤집기\n",
+    "\n",
+    "[::-1]을 통해 문자열을 뒤집을 수 있다."
    ]
   },
   {
@@ -1015,6 +1017,23 @@
     "\n",
     "    # 처음 생각했던 방식... [::-1]로 뒤집을 수 있다는 것을 잊지 말자\n",
     "    return my_string[:s]+my_string[s:e+1][::-1]+my_string[e+1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 세로 읽기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, m, c):\n",
+    "    return my_string[c-1::m]"
    ]
   },
   {
