--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1040,6 +1040,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### qr code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(q, r, code):\n",
+    "    result = ''\n",
+    "    for i in range(len(code)):\n",
+    "        if i % q == r:\n",
+    "            result += code[i]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 엄청난 한 줄 코드 (다른사람 풀이)\n",
+    "def solution(q, r, code):\n",
+    "    return code[r::q]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lev1"
    ]
   },
