이상한 문자 만들기

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1083,6 +1083,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    # 공백을 기준으로 나눠서 리스트로 저장\n",
+    "    li = s.split(' ')\n",
+    "    # 결과를 저장할 변수\n",
+    "    result = ''\n",
+    "    # li안의 값을 반복\n",
+    "    for i in li:\n",
+    "        # i의 길이만큼 반복\n",
+    "        for j in range(len(i)):\n",
+    "            # j의 인덱스 값이 짝수라면\n",
+    "            if j % 2 == 0:\n",
+    "                # 대문자로 변경하여 result에 저장\n",
+    "                result += i[j].upper()\n",
+    "            else:\n",
+    "                # 홀수라면 소문자로 변경하여 result에 저장\n",
+    "                result += i[j].lower()\n",
+    "        # j의 반복(대소문자 변경)이 종료되면 i의 반복이 종료되기 전에 공백을 result에 추가\n",
+    "        result += ' '\n",
+    "    # result의 맨 마지막 공백 값은 필요하지 않은 공백을 추가한 것이므로 제외하고 출력\n",
+    "    return result[:-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
