--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1118,6 +1118,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(d, budget):\n",
+    "    # 각 부서의 신청금 리스트를 정렬 (신청금이 가장 적은 부서부터 줘야 최대한 많은 부서에게 금액 지원이 가능하다)\n",
+    "    d = sorted(d)\n",
+    "    # 지원금을 줄 수 있는 부서의 갯수\n",
+    "    result = 0\n",
+    "    # 지원한 지원금 금액\n",
+    "    temp = 0\n",
+    "    # 각 부서의 신청금을 추출\n",
+    "    for i in d:\n",
+    "        # 지원한 금액과 각 부서가 신청한 금액(i)을 더한 값이 예산(budget)보다 작거나 같다면 \n",
+    "        if temp + i <= budget:\n",
+    "            # result에 1을 더하고\n",
+    "            result += 1\n",
+    "            # 지원한 금액에 i값을 더해줌\n",
+    "            temp += i\n",
+    "        else:\n",
+    "            # 예산 초과가 됐다면 반복문 종료\n",
+    "            break\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 풀이로 더 간단한 것이 존재하지만, 해당 코드는 시간복잡도가 반복문을 도는 것 보다 높아서 추천하지는 않는다.\n",
+    "# 부서의 갯수가 적다고 한정된다면 해당 코드도 괜찮다.\n",
+    "def solution(d, budget):\n",
+    "    d.sort()\n",
+    "    while budget < sum(d):\n",
+    "        d.pop()\n",
+    "    return len(d)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
