숫자 문자열과 영단어

--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1167,6 +1167,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    for num, eng in enumerate([\"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\"]):\n",
+    "        s = s.replace(eng,str(num))\n",
+    "    return int(s)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
