--- a/CiTy-Study_2023/week5.ipynb
+++ b/CiTy-Study_2023/week5.ipynb
@@ -1182,7 +1182,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [1차]비밀지도"
+    "#### [1차]비밀지도\n",
+    "\n",
+    "bin(binary): 10진수를 2진수로 변환해주는 함수  \n",
+    "ing(binary,n): n진수를 10진수로 변환해주는 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 테스트 2,5,6 런타임 에러 발생 (62.5 / 100.0)\n",
+    "\n",
+    "def solution(n, arr1, arr2):\n",
+    "    \n",
+    "    # 각 배열을 2진수로 변경하여 저장\n",
+    "    for i in range(len(arr1)):\n",
+    "        temp = bin(arr1[i])[-n:]\n",
+    "        \n",
+    "        if 'b' in temp:\n",
+    "            # temp 값에 'b'(2진수로 바뀌면서 생긴 문자)를 '0'으로 변경\n",
+    "            temp = temp.replace('b','0')\n",
+    "        \n",
+    "        # temp의 길이가 n보다 작으면 (2진수로 변경하면서 길이가 짧아지는 경우 발생)\n",
+    "        if len(temp) < n:\n",
+    "            # 부족한 갯수만큼 '0'을 추가\n",
+    "            temp = (n - len(temp))*'0' + temp\n",
+    "        else:\n",
+    "            # 부족하지 않다면 arr1[i] 값에 2진수로 변경한 값으로 바꾸기\n",
+    "            arr1[i] = temp\n",
+    "            \n",
+    "    # arr2도 위와 같이 10진수를 2진수로 변경\n",
+    "    for i in range(len(arr2)):\n",
+    "        temp = bin(arr2[i])[-n:]\n",
+    "        if 'b' in temp:\n",
+    "            temp = temp.replace('b','0')\n",
+    "        if len(temp) < n:\n",
+    "            arr2[i] = (n - len(temp))*'0' + temp\n",
+    "        else:\n",
+    "            arr2[i] = temp\n",
+    "        \n",
+    "    # 두 배열을 더하기 \n",
+    "\n",
+    "    # n값만큼 빈 문자열 생성\n",
+    "    result = ['']*n\n",
+    "    \n",
+    "    # 예, arr1의 0번째 값(문자열)의 0번째 문자열부터 비교\n",
+    "    for j in range(n):\n",
+    "        for k in range(n):\n",
+    "            # 두 값 모두 0이라면\n",
+    "            if (arr1[j][k] == '0') and (arr2[j][k] == '0'):\n",
+    "                # result[j]에 빈 문자열 추가\n",
+    "                result[j] += ' '\n",
+    "            else:\n",
+    "                # 아니라면(두 배열중 하나라도 벽인 것) '#' 추가 \n",
+    "                result[j] += '#'\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zfill(width): 문자열의 총 길이를 width라고 했을 때 기존 문자열에서 부족한 만큼 '0을 추가해줌'   \n",
+    "```python\n",
+    "\"2\".zfill(3) # '003'\n",
+    "\n",
+    "'200'.zfill(3) # '200' 부족한 부분이 없으므로 채우지 않음\n",
+    "\n",
+    "'10'.zfill(6) # '000010'\n",
+    "```\n",
+    "\n",
+    "rjust(width,str): 원하는 문자열(str)로 부족한 길이를 채워줌\n",
+    "```python\n",
+    "'2'.rjust(3,'a') # 'aa2'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른사람 풀이\n",
+    "def solution(n, arr1, arr2):\n",
+    "    answer = []\n",
+    "    for i in range(n):\n",
+    "        #  bin(arr1[i] | arr2[i]) 는 arr1[i]랑 arr2[i]를 이진변환 하고 같은 자리에 모두 0이 오면 0, 하나라도 1이 있으면 1로 출력\n",
+    "        a = bin(arr1[i] | arr2[i])[2:].zfill(n)\n",
+    "        b = a.replace(\"1\", \"#\").replace(\"0\", \" \")\n",
+    "        answer.append(b)\n",
+    "    return answer"
    ]
   }
  ],
