--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -181,6 +181,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 리스트 자르기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, slicer, num_list):\n",
+    "    if n == 1:\n",
+    "        return num_list[:slicer[1]+1]\n",
+    "    elif n == 2:\n",
+    "        return num_list[slicer[0]:]\n",
+    "    elif n == 3:\n",
+    "        return num_list[slicer[0]:slicer[1]+1]\n",
+    "    else:\n",
+    "        return num_list[slicer[0]:slicer[1]+1:slicer[2]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 \n",
+    "# 초 간결, 4가지 슬라이싱을 모두 구해놓고 이 중에 하나를 선택하게 되는...\n",
+    "def solution(n, slicer, num_list):\n",
+    "    a, b, c = slicer\n",
+    "    return [num_list[:b + 1], num_list[a:], num_list[a:b + 1], num_list[a:b + 1:c]][n - 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 첫번째로 나오는 음수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num):\n",
+    "    for i in range(len(num)):\n",
+    "        if num[i] < 0:\n",
+    "            return i\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열만들기3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, intervals):\n",
+    "    result = []\n",
+    "    for a,b in intervals:\n",
+    "        result += arr[a:b+1]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2의 영역"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    two = []\n",
+    "    \n",
+    "    # 2가 들어있는 인덱스 값 찾아서 저장하기\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] == 2:\n",
+    "            two.append(i)\n",
+    "            \n",
+    "    # 2의 갯수에 따라 다르게 출력하기\n",
+    "    if len(two) == 0:\n",
+    "        return [-1]\n",
+    "    elif len(two) == 1:\n",
+    "        return [arr[two[0]]]\n",
+    "    else:\n",
+    "        return arr[two[0]:two[-1]+1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "# 코드가 약간 이해가 안된다...!\n",
+    "def solution(arr):\n",
+    "    if 2 not in arr:\n",
+    "        return [-1]\n",
+    "    return arr[arr.index(2) : len(arr) - arr[::-1].index(2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 조각하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, query):\n",
+    "    for i in range(len(query)):\n",
+    "        if i % 2 == 0:\n",
+    "            arr = arr[:query[i]+1]\n",
+    "        else:\n",
+    "            arr = arr[query[i]:]\n",
+    "            \n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
