코드 이해부분 수정

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -286,16 +286,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "index(value) : value의 값이 언제 처음 등장했는지 알려준다. (즉, 가장 처음 등장하는 value 값의 위치를 알려줌) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 다른 사람 코드\n",
-    "# 코드가 약간 이해가 안된다...!\n",
     "def solution(arr):\n",
     "    if 2 not in arr:\n",
     "        return [-1]\n",
+    "    # 처음 2가 등장하는 인덱스부터 ~ 마지막 2(::-1)가 등장하는 인덱스의 위치까지 출력\n",
     "    return arr[arr.index(2) : len(arr) - arr[::-1].index(2)]"
    ]
   },
