--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -18,6 +18,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 숫자 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num, k):\n",
+    "    # 두 매개변수 모두 타입이 int이기에 str로 변경해야 함\n",
+    "    if str(k) in str(num):\n",
+    "        return str(num).index(str(k)) + 1\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
