n의 배수 고르기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -39,6 +39,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### n의 배수 고르기\n",
+    "\n",
+    "처음에는 기존 인덱스에서 n의 배수가 아닌 값들을 삭제하려고 했으나, 삭제한 다음의 값이 for 루프에 포함되지 않는 현상 발생.  \n",
+    "따라서 코드를 삭제에서 새로운 변수를 만들어서 n의 배수를 추가하는 방향으로 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, numlist):\n",
+    "    result = []\n",
+    "    for i in numlist:\n",
+    "        if i % n == 0:\n",
+    "            result.append(i)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다른 분의 코드, filter를 활용함...!  \n",
+    "filter는 그냥 사용하면 코드가 단축된 느낌이 없는데, lamda를 활용해야 대폭 단축됨  \n",
+    "filter의 주의점은 type이 filter로 자동 변경됨. 따라서 원하는 type으로 변경해서 사용해야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 \n",
+    "def solution(n, numlist):\n",
+    "    return list(filter(lambda v: v%n==0, numlist))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
