--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -114,6 +114,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### OX퀴즈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(quiz):\n",
+    "    result = []\n",
+    "\n",
+    "    # 반복문을 통해 quiz 배열을 돈다\n",
+    "    for i in quiz:\n",
+    "        # split한 마지막 배열의 값(결과 값)을 temp에 저장\n",
+    "        temp = i.split(' ')[4]\n",
+    "\n",
+    "        # 연산자(1번 배열)에 따라 연산후, stemp 변수에 값 저장\n",
+    "        if i.split(' ')[1] == '+':\n",
+    "            stemp = int(i.split(' ')[0]) + int(i.split(' ')[2])\n",
+    "        elif i.split(' ')[1] == '-':\n",
+    "            stemp = int(i.split(' ')[0]) - int(i.split(' ')[2])\n",
+    "            \n",
+    "        # temp와 stemp가 같은지 비교\n",
+    "        if stemp == int(temp):\n",
+    "            result.append('O')\n",
+    "        else:\n",
+    "            result.append('X')\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "eval()을 사용하고 싶었으나 계속 에러 발생...  \n",
+    "다른 분의 코드를 확인하니 되는 듯 하다..?\n",
+    "\n",
+    "다른 사람의 코드가 에러 없이 eval을 사용할 수 있는 이유  \n",
+    "-> eval은 문자열을 연산해주는 건데, 이미 연산의 결과(=)가 존재하므로 작동하지 않는 것이었음..  \n",
+    "따라서 '='의 값을 '=='으로 변경해서 연산을 실행하거나, '='을 기준으로 split하여 '='의 앞 부분만 연산을 실행해야 에러발생이 안됨."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 \n",
+    "\n",
+    "def valid(equation):\n",
+    "    equation = equation.replace('=', '==')\n",
+    "    return eval(equation)\n",
+    "\n",
+    "def solution(equations):\n",
+    "    return [\"O\" if valid(equation) else \"X\" for equation in equations]    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
