--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -201,6 +201,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 제곱수 판별하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    for i in range(1,1000001):\n",
+    "        if i**2 == n:\n",
+    "            return 1\n",
+    "    return 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 무식하게 for 다 돌리지 않고 구하는 방법...\n",
+    "def solution(n):\n",
+    "    return 1 if (n ** 0.5).is_integer() else 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
