--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -232,6 +232,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 세균증식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, t):\n",
+    "    return (2 ** t) * n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 시프트 연산자로 풀기...\n",
+    "# n의 비트를 t번 왼쪽으로 이동시킴\n",
+    "def solution(n, t):\n",
+    "    return n << t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
