--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -278,6 +278,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Day19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7의 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array):\n",
+    "    result = 0\n",
+    "    for i in array:\n",
+    "        result += int(str(i).count('7'))\n",
+    "    return result\n",
+    "\n",
+    "# 한줄 코드\n",
+    "def solution(array):\n",
+    "    return str(array).count('7')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
