잘라서 배열로 저장하기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -309,6 +309,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 잘라서 배열로 저장하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def solution(my_str, n):\n",
+    "    result = []\n",
+    "    # 문자열 길이를 n으로 나눈 후 올림 한 값을 저장 \n",
+    "    indx = math.ceil(len(my_str)/n)\n",
+    "\n",
+    "    # 문자열 자르기\n",
+    "    for i in my_str:\n",
+    "        # n의 값만 큼 문자열 자르기\n",
+    "        result.append(my_str[:n])\n",
+    "        # 자른 부분은 빈 문자열로 변경하기\n",
+    "        my_str = my_str.replace(my_str[:n],'',1)\n",
+    "    \n",
+    "    # 그냥 result를 출력하면 빈 문자열로 변경한 것 또한 존재함. 따라서 위에서 구한 indx 인덱스 값까지만 출력\n",
+    "    return result[:indx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "def solution(my_str, n):\n",
+    "    # 슬라이싱은 값을 초과해도 에러 발생 안함\n",
+    "    return [my_str[i: i + n] for i in range(0, len(my_str), n)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
