중복된 숫자 개수

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -351,6 +351,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 중복된 숫자 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array, n):\n",
+    "    return array.count(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
