머쓱이보다 키 큰 사람

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -368,6 +368,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 머쓱이보다 키 큰 사람"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array, height):\n",
+    "    result = 0\n",
+    "    for i in array:\n",
+    "        if i > height:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "# 한줄 코드로 변경하고 싶었는데 sum으로 감싸면 되는 거였음..\n",
+    "def solution(array, height):\n",
+    "    return sum(1 for a in array if a > height)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 코딩테스트 기초"
    ]
   },
