순서 바꾸기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -740,6 +740,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 순서 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list, n):\n",
+    "    return num_list[n:] + num_list[:n]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
