왼쪽 오른쪽

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -757,6 +757,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 왼쪽 오른쪽"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(str_list):\n",
+    "    for i in str_list:\n",
+    "        if i == 'l':\n",
+    "            return str_list[:str_list.index('l')]\n",
+    "        elif i == 'r':\n",
+    "            return str_list[str_list.index('r')+1:]\n",
+    "    return []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
