--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -813,6 +813,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Day14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 홀수 vs 짝수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    odd = 0\n",
+    "    even = 0\n",
+    "    for i in range(len(num_list)):\n",
+    "        if (i+1) % 2 == 0:\n",
+    "            even += num_list[i]\n",
+    "        else:\n",
+    "            odd += num_list[i]\n",
+    "    \n",
+    "    return even if even > odd else odd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 초 간단 한줄 코드\n",
+    "def solution(num_list):\n",
+    "    return max(sum(num_list[::2]), sum(num_list[1::2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
