--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -856,6 +856,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 5명씩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(names):\n",
+    "    return names[::5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
