--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -873,6 +873,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 할 일 목록"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(todo_list, finished):\n",
+    "    result = []\n",
+    "    for i in range(len(finished)):\n",
+    "        if not finished[i]:\n",
+    "            result.append(todo_list[i])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 한줄\n",
+    "def solution(todo_list, finished):\n",
+    "    return [work for idx, work in enumerate(todo_list) if not finished[idx]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
