n보다 커질 때까지 더하기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -905,6 +905,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### n보다 커질 때까지 더하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers, n):\n",
+    "    result = 0\n",
+    "    for i in numbers:\n",
+    "        result += i\n",
+    "        if result > n:\n",
+    "            return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
