--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -926,6 +926,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 수열과 구간 쿼리 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, queries):\n",
+    "    for s,e in queries:\n",
+    "        for i in range(len(arr)):\n",
+    "            if i >= s and i <= e:\n",
+    "                arr[i] += 1\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 조금 더 간결하고 깔끔하게\n",
+    "def solution(arr, queries):\n",
+    "    for l,r in queries:\n",
+    "        for i in range(l,r+1): arr[i]+=1\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lv.1"
    ]
   }
