--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1115,6 +1115,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    count = 0\n",
+    "    for i in num_list:\n",
+    "        while i != 1:\n",
+    "            if i % 2 == 0:\n",
+    "                i //= 2\n",
+    "            else:\n",
+    "                i = (i-1) // 2\n",
+    "            count += 1\n",
+    "    return count"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
