길이에 따른 연산

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1140,6 +1140,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 처음에는 한줄로 작성하고 싶었음.. (근데 실패)\n",
+    "def solution(num_list):\n",
+    "  return sum(num_list) if len(num_list) >= 11 else [result*=i for i in num_list]\n",
+    "\n",
+    "# 다른 사람 코드\n",
+    "\n",
+    "# prod (곱해주는 함수)사용\n",
+    "from math import prod\n",
+    "def solution(num_list):\n",
+    "    return sum(num_list) if len(num_list)>=11 else prod(num_list)\n",
+    "\n",
+    "# reduce 사용 (여개의 데이터를 대상으로 주로 누적 집계를 내기 위해서 사용함)\n",
+    "from functools import reduce\n",
+    "def solution(l):\n",
+    "    return sum(l) if len(l)>=11 else reduce(lambda a,b: a*b, l)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    result = 1\n",
+    "    if len(num_list) >= 11:\n",
+    "        return sum(num_list)\n",
+    "    else:\n",
+    "        for i in num_list:\n",
+    "            result *= i\n",
+    "        return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
