원하는 문자열 찾기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1187,6 +1187,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 대소문자 구분 안하므로 모두 소문자로 바꾸고 비교\n",
+    "def solution(myString, pat):\n",
+    "    return 1 if pat.lower() in myString.lower() else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 (boolean을 사용해서 true와 false 값을 int로 변환하여 return)\n",
+    "def solution(myString, pat):\n",
+    "    return int(pat.lower() in myString.lower())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
