--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1223,10 +1223,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myString):\n",
+    "    return myString.upper()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 소문자로 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myString):\n",
+    "    return myString.lower()"
    ]
   },
   {
@@ -1237,6 +1257,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(strArr):\n",
+    "    return [i.lower() if strArr.index(i) % 2 == 0 else i.upper() for i in strArr]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1244,10 +1274,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myString):\n",
+    "    return ''.join([i.upper() if i == 'a' or i == 'A' else i.lower() for i in myString])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 (replace를 쓰면 더 깔끔한데...)\n",
+    "def solution(myString):\n",
+    "    return myString.lower().replace('a', 'A')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 특정한 문자를 대문자로 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, alp):\n",
+    "    return my_string.replace(alp,alp.upper())"
    ]
   },
   {
