조건에 맞게 수열 변환하기2

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1111,6 +1111,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 조건에 맞게 수열 변환하기2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    # 변화되는 배열을 담을 배열 만들기 (단, 빈 배열은 while문 조건이 돌아갈 수 없으므로 임의로 서로 다른 배열 2개를 생성)\n",
+    "    count = [[0],[1]]\n",
+    "    # count의 -1 값과 -2값이 같으면 반복 종료\n",
+    "    while count[-1] != count[-2]:\n",
+    "        # 조건에 맞게 변화된 배열을 temp에 저장\n",
+    "        temp = [i//2 if (i >= 50 and i % 2 == 0) else i*2+1 if (i < 50 and i%2 != 0) else i for i in arr]\n",
+    "        # temp를 count에 추가\n",
+    "        count.append(temp)\n",
+    "        # 만약 처음의 arr 값과 temp 값이 같다면 반복문 종료\n",
+    "        if arr == temp:\n",
+    "            break\n",
+    "        # 아니라면 arr를 temp로 변경\n",
+    "        arr  = temp\n",
+    "    # 처음에 임의로 추가한 배열 2개 + 맨 마지막 배열(-2와 동일한 배열)을 제거 한 길이를 출력\n",
+    "    return len(count)-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1로 만들기"
    ]
   },
