--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -412,6 +412,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(dots):\n",
+    "    for i in range(len(dots)):\n",
+    "        for j in range(i+1):\n",
+    "            if dots[i][0] == dots[j][0]:\n",
+    "                height = abs(dots[i][1] - dots[j][1])\n",
+    "                break\n",
+    "            if dots[i][1] == dots[j][1]:\n",
+    "                width = abs(dots[i][0] - dots[j][0])\n",
+    "                break\n",
+    "    return width * height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 간단한 방법이...\n",
+    "def solution(dots):\n",
+    "    return (max(dots)[0] - min(dots)[0])*(max(dots)[1] - min(dots)[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
