캐릭터의 좌표

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -448,6 +448,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(keyinput, board):\n",
+    "    # 캐릭터의 위치\n",
+    "    result = [0,0]\n",
+    "\n",
+    "    for i in keyinput:\n",
+    "        # 방향에 따라 이동\n",
+    "        if i == 'right':\n",
+    "            result[0] += 1\n",
+    "        elif i == 'left':\n",
+    "            result[0] -= 1\n",
+    "        elif i == 'up':\n",
+    "            result[1] += 1\n",
+    "        else:\n",
+    "            result[1] -= 1\n",
+    "        \n",
+    "        # 이동했을 때 board 크기를 넘었다면 방향의 반대 실행\n",
+    "        if result[0] > board[0]//2:\n",
+    "            result[0] -= 1\n",
+    "        elif result[0] < -(board[0]//2):\n",
+    "            result[0] += 1\n",
+    "        elif result[1] > board[1]//2:\n",
+    "            result[1] -= 1\n",
+    "        elif result[1] < -(board[1]//2):\n",
+    "            result[1] += 1\n",
+    "            \n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
